<resources>
    <string name="app_name">MyDiary</string>
    <string name="welcome_to_my_diary">Welcome To My Diary</string>
    <string name="log_in">Log In</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="Log_In">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="want_to_log_in">Want To Log In</string>
</resources>